test/classes/vass/subclass-cast-error.good
subclass-cast-error.chpl:5: error: casting an object to a class that is not its superclass
