test/classes/vass/subclass-cast-error.chpl
class C{};
class D:C{};

var c = new C();
var d = c:D;
writeln(c);
writeln(d);
